...
              ),
              const SizedBox(width: 8),
              SizedBox(
                height: 40,
                width: 40,
                child: IconButton(
                  key: const Key('song.controls.expand'),
                  padding: EdgeInsets.zero,
                  constraints: const BoxConstraints(),
                  onPressed: _onToggleExpand,
                  icon: Icon(
                    _isExpanded
                        ? Icons.keyboard_arrow_up_rounded
...
